# ghidra_decompiler_plugins

./: .ackrc  .bazelrc  .gitattributes  .gitignore  BUILD.ghidra  MODULE.bazel  Readme.md  bazel.py  ghidra.pat  go.mod  hugo.toml  integrationTest.py
.github/workflows/: hugo.yml
content/en/: Readme.md  _index.md
extras/dpdk/: BUILD.dpdk
extras/whisper/: BUILD.whisper
plugins/: .gitignore  BUILD  Doxyfile  Readme.md  action_prepare.cc  action_prepare.hh  design_docs.hh  diagnostics.cc  diagnostics.hh  framework.cc  framework.hh  inspector.cc  inspector.hh  plugins_doc.hh  riscv.cc  riscv.hh  riscv_csr.cc  riscv_csr.hh  riscv_doc.hh  riscv_sleigh.cc  riscv_sleigh.hh  riscv_vector_doc.hh  rule_vector_transform.cc  rule_vector_transform.hh  utility.cc  utility.hh  vector_loop_match.cc  vector_loop_match.hh  vector_matcher.cc  vector_matcher.hh  vector_ops.cc  vector_ops.hh  vector_stdlib.cc  vector_transformer.cc  vector_transformer.hh  vector_tree_match.cc  vector_tree_match.hh  vectorcopy.cc  vectorcopy.hh  vectorsequence.hh
scripts/: .gitignore  analytics.py  process_analytics.py  test_analytics.py
scripts/test_data/: decompiled_source.c  (+2 more)
test/: Makefile  dpdk_sample_1.ghidra  dpdk_sample_1_save.xml  dpdk_sample_2.ghidra  dpdk_sample_2_save.xml  dpdk_sample_3.ghidra  dpdk_sample_3_save.xml  memcpy_exemplars.S  memcpy_exemplars.ghidra  memcpy_exemplars_save.xml  strcmp_exemplars.S  strcmp_exemplars.ghidra  strcmp_exemplars_save.xml  strlen_exemplars.S  strlen_exemplars.ghidra  strlen_exemplars_save.xml  whisperInit.S  whisperInit.ghidra  whisperInit_save.xml  whisper_main.ghidra  whisper_main_save.xml  whisper_sample_1.ghidra  whisper_sample_10.ghidra  whisper_sample_10_save.xml  whisper_sample_11.ghidra  whisper_sample_11_save.xml  whisper_sample_12.ghidra  whisper_sample_12_save.xml  whisper_sample_1_save.xml  whisper_sample_2.ghidra  whisper_sample_2_save.xml  whisper_sample_3.ghidra  whisper_sample_3_save.xml  whisper_sample_4.ghidra  whisper_sample_4_save.xml  whisper_sample_5.ghidra  whisper_sample_5_save.xml  whisper_sample_6.ghidra  whisper_sample_6_save.xml  whisper_sample_7.ghidra  (+5 more)
test_binaries/: .gitattributes  dpdk-l3fwd  dpdk-l3fwd-O2  dpdk-l3fwd-O3  whisper_cpp_rva23
test_data/: .gitattributes  Makefile  core_types.xml  csrr_bug.S  csrr_test.ghidra  csrr_test_save.xml  dpdk_sample_1.ghidra  dpdk_sample_1_save.xml  dpdk_sample_2.S  dpdk_sample_2.ghidra  dpdk_sample_2_save.xml  dpdk_sample_3.ghidra  dpdk_sample_3_save.xml  dpdk_sample_4.ghidra  dpdk_sample_4_save.xml  dpdk_sample_5.ghidra  dpdk_sample_5_save.xml  dpdk_sample_6.ghidra  dpdk_sample_6_save.xml  dpdk_sample_7.ghidra  dpdk_sample_7_save.xml  dpdk_sample_8.ghidra  dpdk_sample_8_save.xml  get_next_arg.S  get_next_arg_fail_save.xml  get_next_arg_test_1.S  get_next_arg_test_1.ghidra  get_next_arg_test_1_save.xml  get_next_arg_test_2.S  get_next_arg_test_2.ghidra  get_next_arg_test_2_save.xml  get_next_arg_test_3.S  get_next_arg_test_3.ghidra  get_next_arg_test_3_save.xml  ghidra_bug_1.S  heapstring.ghidra  heapstring_save.xml  memcpy_exemplars.S  memcpy_exemplars.ghidra  memcpy_exemplars_save.xml  (+54 more)
(+51 files in other folders)
