
module(
    name = "riscv_transforms",
    version = "0.3",
)

bazel_dep(name = "spdlog", version = "1.15.2")

git_repository = use_repo_rule("@@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

# Ghidra sources will be cached into something like ~/.cache/bazel/_bazel_thixotropist/*/external/+_repo_rules+ghidra/
git_repository(
    name = "ghidra",
    remote = "git@github.com:thixotropist/ghidra.git",
    # This commit should be within the "isa_ext" branch
    commit = "6bbffe0e19903682ea1098d246d4c0a9dd33db63",
    build_file = "//:BUILD.ghidra",
    patches = ["ghidra.pat"],
    patch_strip = 1,
)